@@ -26,7 +26,12 @@
       static method ICMP_TIMESTAMP : int ();
 
       static method ICMP_TIME_EXCEEDED : int ();
+    
+    * Added the following methods to the Sys::Socket class
+      static method sockatmark : int ($sockfd : int);
 
+      static method sendto : int ($sockfd : int, $buf : string, $len : int, $flags : int, $addr : Sys::Socket::Sockaddr, $addrlen : int);
+  
   [Bug Fix]
     * Added the following methods that is documented but not implemented to the Sys::Socket::Constant class.
 
